Get rid of separate root project in composite build, merge it with sjdb build